--- a/mentor/src/app/login/login.component.html
+++ b/mentor/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <body>
-<div class="main">
-    <p class="sign" align="center">Iniciar Sesion</p>
+  <div class="main">
+    <p class="sign" align="center">Iniciar Sesión</p>
     <form class="form1" (ngSubmit)="onLogin()">
-      <input class="un" type="text" align="center" placeholder="Username" [(ngModel)]="username" name="Codigo" required>
+      <input class="un" type="text" align="center" placeholder="Usuario" [(ngModel)]="username" name="Codigo" required>
       <input class="pass" type="password" align="center" placeholder="Contraseña" [(ngModel)]="password" name="password"
         required>
       <button class="submit" type="submit" align="center">Sign in</button>
