--- a/mentor/src/app/principal/principal.component.css
+++ b/mentor/src/app/principal/principal.component.css
@@ -1,52 +1,70 @@
-
-*{
+* {
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
 
-h1{ font-size: 3.5em;}
-h2{ font-size: 2.7em;}
-h3{ font-size: 2em;}
-p{ font-size: 1.25em;}
-ul{ list-style: none;}
-li{ font-size: 1.25em;}
+h1 {
+    font-size: 3.5em;
+}
 
-button{
+h2 {
+    font-size: 2.7em;
+}
+
+h3 {
+    font-size: 2em;
+}
+
+p {
+    font-size: 1.25em;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    font-size: 1.25em;
+}
+
+button {
     font-size: 1.25em;
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 5px;
-    border: 2px solid rgba(0,0,0,0.3);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     color: white;
     background-color: rgb(54, 134, 61);
 }
 
-button:hover{
+button:hover {
     background-color: rgb(150, 175, 140);
 }
 
-.container{
+.container {
     max-width: 1400px;
     margin: auto;
 }
 
-.color-acento{ color:rgb(131, 209, 157); }
-
-header{
-    background-color: rgb(0, 0, 0);
-    
+.color-acento {
+    color: rgb(131, 209, 157);
 }
 
-header .logo{
+header {
+    background-color: rgb(0, 0, 0);
+
+}
+
+header .logo {
     margin: 0;
     padding: 25px 30px;
     font-weight: bold;
@@ -54,215 +72,264 @@ header .logo{
     font-size: 1.6em;
 }
 
-header .container{
+header .container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-header nav{
+header nav {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding-bottom: 25px;
 }
 
-header a{
+header a {
     padding: 5px 12px;
     text-decoration: none;
     font-weight: bold;
     color: rgb(175, 209, 169);
 }
 
-header a:hover{
+header a:hover {
     color: rgb(161, 235, 183);
 }
 
-#hero{
+#hero {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
     height: 90vh;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    padding-top: 100px;
+    padding-bottom: 20px;
 }
 
-#hero h1{
+#hero h1 {
     color: white;
+    font-size: 4em;
+    margin-bottom: 20px;
+    line-height: 1.2;
+    font-weight: bold;
 }
 
-#hero button{
+#hero button {
     font-size: 1.75em;
+    padding: 15px 40px;
+    border-radius: 8px;
+    margin-top: 30px;
 }
 
-#somos-proya .container{
-    text-align: center;
-    padding: 200px 12px;
+#somos-proya .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 50px;
+    text-align: left;
 }
 
-#nuestros-programas{
+#nuestros-programas {
     background-color: rgb(59, 136, 35);
+    color: white;
     color: rgb(255, 255, 255);
+    padding: 50px 0;
     text-align: center;
 }
 
-#nuestros-programas .container{
+#nuestros-programas .container {
     padding: 150px 12px;
 }
 
-#nuestros-programas h2{
-    margin-top: 0;
-    font-size: 3.2em;
+#nuestros-programas h2 {
+    font-size: 3em;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
-#nuestros-programas p{
+#nuestros-programas p {
     display: none;
+}
+
+.programas {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
 }
 
 #nuestros-programas .carta {
     background-color: rgb(255, 255, 255);
-    padding: 20px; 
+    padding: 20px;
     margin: 30px;
     border-radius: 15px;
-    min-height: 400px; 
+    min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
 }
-.carta:first-child{
-    background-image: linear-gradient(
-        0deg,
-        rgba(7, 226, 44, 0.5),
-        rgba(145, 67, 67, 0.5)
-    )
-    ,url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
+
+.carta button {
+    background-color: rgb(54, 134, 61);
+    color: white;
+    border: none;
+    padding: 12px 25px;
+    font-size: 1.2em;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.carta button:hover {
+    background-color: rgb(100, 200, 120);
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.carta:first-child {
+    background-image: linear-gradient(0deg,
+            rgba(7, 226, 44, 0.5),
+            rgba(145, 67, 67, 0.5)), url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
 
 }
 
-.carta:nth-child(2){
-    background-image: linear-gradient(
-        0deg,
-        rgba(83, 224, 64, 0.5),
-        rgba(100, 177, 89, 0.5)
-    )
-    ,url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
+.carta:nth-child(2) {
+    background-image: linear-gradient(0deg,
+            rgba(83, 224, 64, 0.5),
+            rgba(100, 177, 89, 0.5)), url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
 }
 
-.carta:nth-child(3){
-    background-image: linear-gradient(
-        0deg,
-        rgba(108, 146, 90, 0.5),
-        rgba(127, 165, 117, 0.5)
-    )
-    ,url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
+.carta:nth-child(3) {
+    background-image: linear-gradient(0deg,
+            rgba(108, 146, 90, 0.5),
+            rgba(127, 165, 117, 0.5)), url("https://opendigital.es/wp-content/uploads/2020/05/benefit.jpg");
 
 }
 
-#caracteristicas .container{
+#caracteristicas .container {
     text-align: center;
     padding: 250px 12px;
 }
 
-#caracteristicas li{
+#caracteristicas li {
     margin: 16px 0px;
     font-weight: bold;
 }
 
 
-footer{
-    background-color: rgb(230,230,230);
+footer {
+    background-color: rgb(230, 230, 230);
 }
 
-footer p{
+footer p {
     margin: 0;
     padding: 12px;
-    color: rgb(100,100,100);
+    color: rgb(100, 100, 100);
 }
 
-footer .container{
+footer .container {
     height: 150px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
 
-@media (min-width: 850px){
-    header{
+@media (min-width: 850px) {
+    header {
         position: fixed;
         width: 100%;
     }
 
-    header .container{
+    header .container {
         flex-direction: row;
         justify-content: space-between;
     }
 
-    header nav{
+    header nav {
         flex-direction: row;
         padding-bottom: 0;
         padding-right: 20px;
     }
 
-    #hero h1{
+    #hero h1 {
         font-size: 5em;
     }
 
-    #somos-proya .container{
+    #somos-proya .container {
         display: flex;
         justify-content: space-evenly;
     }
 
-    #somos-proya .texto{
+    #somos-proya .texto {
         width: 50%;
         max-width: 600px;
         text-align: initial;
-        padding-left: 30px;
+        padding-left: 50px;
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
-    #somos-proya h2{
+    #somos-proya h2 span {
+        color: #0f8b38;
+        font-weight: bold;
+        font-size: 1.2em;
+    }
+
+    #somos-proya p {
+        font-size: 1.1em;
+        line-height: 1.8;
+        color: #555;
+        margin-top: 10px;
+        text-align: justify;
+    }
+
+    #somos-proya h2 {
         margin-top: 0px;
     }
 
-    #somos-proya .img-container{
+    #somos-proya .img-container {
         background-image: url("https://arquitecturapanamericana.com/wp-content/gallery/AULARIO-EN-EL-CAMPUS-DE-LA-UNIVERSIDAD-RICARDO-PALMA%2C-SURCO/AULARIO-EN-EL-CAMPUS-DE-LA-UNIVERSIDAD-R.-P.-006.jpg");
         background-size: cover;
-        background-position: center center;
+        background-position: center;
+        border-radius: 15px;
+        /* Bordes redondeados para la imagen */
         height: 500px;
-        width: 400px; 
+        width: 400px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        /* Añadir sombra */
     }
 
-    #nuestros-programas .programas{
+    #nuestros-programas .programas {
         display: flex;
         justify-content: center;
     }
 
-    #nuestros-programas p{
+    #nuestros-programas p {
         display: block;
         margin-bottom: 30px;
     }
 
-    #nuestros-programas h2{
+    #nuestros-programas h2 {
         font-size: 4em;
     }
 
-    #nuestros-programas h3{
-        margin-bottom: 59px; 
+    #nuestros-programas h3 {
+        margin-bottom: 59px;
     }
 
-    #nuestros-programas .carta{
+    #nuestros-programas .carta {
         padding: 50px;
         background-size: 100% 150px;
         background-repeat: no-repeat;
@@ -271,66 +338,56 @@ footer .container{
         box-shadow: 2px 2px 10px rgba(94, 90, 90, 0.5);
     }
 
-    .carta:first-child{
-        background-image: linear-gradient(
-            0deg,
-            rgba(0,0,0,0.5),
-            rgba(0,0,0,0.5)
-        )
-        ,url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTkNxr2DXCRZScaqgcm8KI7QVWtz4meNHo0A&s");
+    .carta:first-child {
+        background-image: linear-gradient(0deg,
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTkNxr2DXCRZScaqgcm8KI7QVWtz4meNHo0A&s");
 
     }
 
-    .carta:nth-child(2){
-        background-image: linear-gradient(
-            0deg,
-            rgba(0,0,0,0.5),
-            rgba(0,0,0,0.5)
-        )
-        ,url("/workspaces/METORSTARPLZ/mentor/src/app/principal/principal.component.css");
+    .carta:nth-child(2) {
+        background-image: linear-gradient(0deg,
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url("/workspaces/METORSTARPLZ/mentor/src/app/principal/principal.component.css");
     }
 
-    .carta:nth-child(3){
-        background-image: linear-gradient(
-            0deg,
-            rgba(0,0,0,0.5),
-            rgba(0,0,0,0.5)
-        )
-        ,url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToIazOv6qzfTU69bW9FcXzHEJQFn6dS5sBFQ&s");
+    .carta:nth-child(3) {
+        background-image: linear-gradient(0deg,
+                rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToIazOv6qzfTU69bW9FcXzHEJQFn6dS5sBFQ&s");
 
     }
 
-    #caracteristicas{
+    #caracteristicas {
         background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZG3Tao3JqpB2zhj4G--wIxrvGj4ppcTqoag&s");
         background-repeat: no-repeat;
-        background-size: 700px 400px;
+        background-size: 500px 400px;
         background-position: calc(100vw - 500px) 120px;
-        background-position: center center;
     }
 
-    #caracteristicas .container{
+    #caracteristicas .container {
         text-align: initial;
     }
 
-    #caracteristicas ul{
+    #caracteristicas ul {
         margin-left: 100px;
     }
 
-    #final h2{
+    #final h2 {
         font-size: 5em;
     }
 
-    #final button{
+    #final button {
         font-size: 2em;
     }
 
-    footer .container{
+    footer .container {
         justify-content: flex-end;
     }
 }
 
 @media (min-width: 1200px) {
-    #caracteristicas{
+    #caracteristicas {
         background-position-x: calc(100vw - 800px);
     }
 }
@@ -345,230 +402,109 @@ footer {
     }
 }
 
-
 .footer-distributed {
     background-color: #1a492c;
+    color: #ffffff;
     box-sizing: border-box;
     width: 100%;
+    padding: 40px 50px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-family: 'Roboto', sans-serif;
     text-align: left;
-    font: bold 16px sans-serif;
-    padding: 50px 50px 60px 50px;
-}
-.footer-distributed .footer-left {
-    width: 30%;
 }
 
-.logo-blanco img {
-    width: 100px;
+.footer-left,
+.footer-center,
+.footer-right {
+    flex: 1;
+    margin: 10px;
+    min-width: 200px;
 }
 
-/* Footer links */
+.footer-left .logo-blanco img {
+    width: 120px;
+    margin-bottom: 15px;
+}
 
-.footer-distributed .footer-links {
+.footer-links {
+    margin: 20px 0;
+}
+
+.footer-links a {
     color: #ffffff;
-    margin: 20px 0 12px;
-}
-
-.footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
     text-decoration: none;
-    color: inherit;
+    margin-right: 15px;
+    font-weight: normal;
 }
 
-.footer-distributed .footer-company-name {
+.footer-links a:hover {
+    text-decoration: underline;
+}
+
+.footer-center i {
+    margin-right: 15px;
+    font-size: 22px;
+    background-color: #2c5b86;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+}
+
+.footer-center p {
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    margin: 0 0 20px 0;
+}
+
+.footer-center a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footer-center a:hover {
+    text-decoration: underline;
+}
+
+.footer-company-about {
+    margin: 20px 0;
+    color: #ffffff;
+}
+
+.footer-company-about span {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer-icons {
+    margin-top: 20px;
+}
+
+.footer-icons a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #3b5998;
+    color: #ffffff;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+    transition: background-color 0.3s ease;
+}
+
+.footer-icons a:hover {
+    background-color: #1a355b;
+}
+
+.footer-company-name {
+    font-size: 14px;
     color: #8f9296;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center {
-    width: 35%;
-}
-
-.footer-distributed .footer-center i {
-    background-color: #33383b;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px;
-}
-
-.footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    vertical-align: middle;
-    margin: 0;
-}
-
-.footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2;
-}
-
-.footer-distributed .footer-center p a {
-    color: #ffffff;
-    text-decoration: none;
-    ;
-}
-
-/* Footer Right */
-
-.footer-distributed .footer-right {
-    width: 30%;
-}
-
-.footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #92999f;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-}
-
-.footer-distributed .footer-company-about span {
-    display: block;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right {
-    display: inline-block;
-    vertical-align: top;
-}
-
-/* Footer left */
-
-.footer-distributed .footer-left {
-    width: 30%;
-}
-
-.footer-distributed h3 {
-    color: #ffffff;
-    font: normal 36px 'Cookie', cursive;
-    margin: 0;
-}
-
-
-/* Footer links */
-
-.footer-distributed .footer-links {
-    color: #ffffff;
-    margin: 20px 0 12px;
-}
-
-.footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color: inherit;
-}
-
-.footer-distributed .footer-company-name {
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center {
-    width: 35%;
-}
-
-.footer-distributed .footer-center i {
-    background-color: #1C4881;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px;
-}
-
-.footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    vertical-align: middle;
-    margin: 0;
-}
-
-.footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2;
-}
-
-.footer-distributed .footer-center p a {
-    color: #ffffff;
-    text-decoration: none;
-    ;
-}
-
-/* Footer Right */
-
-.footer-distributed .footer-right {
-    width: 30%;
-}
-
-.footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #ffffff;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-}
-
-.footer-distributed .footer-company-about span {
-    display: block;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.footer-distributed .footer-icons a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    
-    border-radius: 10px;
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-    margin-right: 10px;
-    margin-bottom: 10px;
     margin-top: 20px;
 }
 
@@ -585,4 +521,10 @@ footer {
     .footer-distributed .footer-center i {
         margin-left: 0;
     }
+}
+
+button:hover {
+    background-color: rgb(100, 200, 120);
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
