--- a/mentor/src/styles.css
+++ b/mentor/src/styles.css
@@ -8,3 +8,14 @@
 root {
     color:lightgreen;
 }
+.notification-tab>.active {
+    @apply text-blue-500 border-b-blue-500 hover:text-blue-500;
+}
+
+.order-tab>.active {
+    @apply bg-blue-500 text-white hover:text-white;
+}
+
+.main.active {
+    @apply md:w-full md:ml-0;
+}
