--- a/mentor/src/app/principal/principal.component.html
+++ b/mentor/src/app/principal/principal.component.html
@@ -20,7 +20,7 @@
         <h1>Conviértete en Mentor
             <br>Guía, inspira y transforma vidas
         </h1>
-        <button>INSCRIBETE</button>
+        <button (click)="info()">INFORMATE</button>
     </section>
 
     <section id="somos-proya">
