--- a/mentor/src/app/principal/principal.component.css
+++ b/mentor/src/app/principal/principal.component.css
@@ -145,36 +145,41 @@ header a:hover {
 }
 
 #nuestros-programas .container {
-    padding: 150px 12px;
+    padding: 50px 20px;
 }
 
 #nuestros-programas h2 {
     font-size: 3em;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-weight: bold;
 }
 
 #nuestros-programas p {
     display: none;
+    margin-bottom: 20px;
+    font-size: 1em;
+    line-height: 1.4;
 }
 
 .programas {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
     flex-wrap: wrap;
 }
 
 #nuestros-programas .carta {
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    margin: 30px;
+    background-color: #2d302f;
+    color: #ffffff;
+    padding: 30px;
     border-radius: 15px;
-    min-height: 400px;
+    width: 300px;
+    box-shadow: 2px 2px 10px rgba(94, 90, 90, 0.5);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     text-align: center;
+    transition: transform 0.3s ease;
 }
 
 .carta button {
@@ -326,7 +331,9 @@ footer .container {
     }
 
     #nuestros-programas h3 {
-        margin-bottom: 59px;
+        margin-bottom: 100px;
+        font-size: 2.5em;
+        font-family: fantasy;
     }
 
     #nuestros-programas .carta {
@@ -334,28 +341,28 @@ footer .container {
         background-size: 100% 150px;
         background-repeat: no-repeat;
         background-position-y: 0;
-        background-color: rgb(45, 48, 47);
-        box-shadow: 2px 2px 10px rgba(94, 90, 90, 0.5);
+        background-color: rgb(85, 85, 85);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); 
+        border: 2px solid #e0e0e0; 
     }
 
     .carta:first-child {
         background-image: linear-gradient(0deg,
                 rgba(0, 0, 0, 0.5),
                 rgba(0, 0, 0, 0.5)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTkNxr2DXCRZScaqgcm8KI7QVWtz4meNHo0A&s");
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
 
     }
 
     .carta:nth-child(2) {
         background-image: linear-gradient(0deg,
                 rgba(0, 0, 0, 0.5),
-                rgba(0, 0, 0, 0.5)), url("/workspaces/METORSTARPLZ/mentor/src/app/principal/principal.component.css");
-    }
-
-    .carta:nth-child(3) {
-        background-image: linear-gradient(0deg,
-                rgba(0, 0, 0, 0.5),
                 rgba(0, 0, 0, 0.5)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToIazOv6qzfTU69bW9FcXzHEJQFn6dS5sBFQ&s");
-
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
     }
 
     #caracteristicas {
@@ -528,3 +535,11 @@ button:hover {
     transform: scale(1.05);
     transition: all 0.3s ease;
 }
+
+.resaltado {
+    color: #ffffff; /* Un amarillo brillante para destacarlo */
+    font-weight: bold; /* Hacerlo negrita */
+    text-decoration: underline; /* Añadir subrayado */
+    cursor: pointer; /* Cambiar el cursor para indicar que es clickeable */
+}
+
