--- a/mentor/src/app/principal/principal.component.html
+++ b/mentor/src/app/principal/principal.component.html
@@ -6,7 +6,7 @@
     <header>
         <div class="container">
             <p class="logo">
-                <a (click)="scrollToSection('top')">STAR URP</a>
+                <a (click)="goToLogin()">STAR URP</a>
             </p>
             <nav>
                 <a (click)="scrollToSection('#somos-proya')">Quienes Somos</a>
