--- a/mentor/src/app/administrador/administrador.component.html
+++ b/mentor/src/app/administrador/administrador.component.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a href="#"
+                        <a (click)=" goToadminmentor()"
                             class="text-gray-300 text-sm flex items-center hover:text-gray-100 before:content-[''] before:w-1 before:h-1 before:rounded-full before:bg-gray-300 before:mr-3">
                             ALUMNOS
                         </a>
@@ -43,18 +43,11 @@
                 </ul>
             </li>
             <li class="mb-1 group">
-                <a href="#"
+                <a (click)=" goToadminmentor()"
                     class="flex items-center py-2 px-4 text-gray-300 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100 sidebar-dropdown-toggle">
                     <i class="ri-folder-line mr-3 text-lg"></i>
                     <span class="text-sm">REUNIONES</span>
                 </a>
-                <ul class="pl-7 mt-2 hidden group-[.selected]:block">
-                    <li class="mb-4">
-                        <a href="#"
-                            class="text-gray-300 text-sm flex items-center hover:text-gray-100 before:contents-[''] before:w-1 before:h-1 before:rounded-full before:bg-gray-300 before:mr-3">Manage
-                            services</a>
-                    </li>
-                </ul>
             </li>
             <li class="mb-1 group">
                 <a href="#"
@@ -64,7 +57,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 11-6 0V7a3 3 0 116 0v1" />
                     </svg>
-                    <span class="text-sm">CERRAR SESION</span>
+                    <span (click)=" goToadminmentor()" class="text-sm">CERRAR SESION</span>
                 </a>
             </li>
         </ul>
