--- a/mentor/src/app/administrador/administrador.component.html
+++ b/mentor/src/app/administrador/administrador.component.html
@@ -10,7 +10,7 @@
     <div class="fixed left-0 top-0 w-64 h-full bg-green-700 p-4 z-50 sidebar-menu transition-transform">
         <a href="#" class="flex items-center pb-4 border-b border-b-gray-800">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8X4H6nNtyD6X5NThGHvSmydNFJnt2ptwZVQ&s" alt="" class="w-8 h-8 rounded object-cover">
-            <span class="text-lg font-bold text-white ml-3">STARD URP</span>
+            <span class="text-lg font-bold text-white ml-3">STAR URP</span>
         </a>
         <ul class="mt-4">
             <li class="mb-1 group active">
